--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -31,3 +31,12 @@ main {
     top: 0px;
     left: 0px;
 }
+
+.card-animation {
+    box-shadow: none;
+    transition: box-shadow 0.3s;
+}
+
+.card-animation:hover {
+    box-shadow: inset -0.7em -0.7em  grey;
+}
